<resources>
    <string name="app_name">Survey List</string>
    <string name="survey_reward">Recompensa: %1$d pontos</string>
    <string name="survey_duration">Duração: %1$d minutos</string>
    <string name="btn_respond">Responder</string>
    <string name="dialog_title">Início da pesquisa</string>
    <string name="dialog_description">Você está prestes a iniciar a pesquisa. Deseja continuar?</string>
    <string name="cancel">Cancelar</string>
    <string name="start_survey">Sim, começar</string>
    <string name="loading_description">Carregando pesquisas...</string>
    <string name="desc_cancel_button">Cancelar início da pesquisa</string>
    <string name="desc_start_button">Começar a pesquisa</string>

</resources>