<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_description"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:contentDescription="@string/desc_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_survey"
            android:contentDescription="@string/desc_start_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="?attr/colorPrimary"
            android:layout_marginStart="12dp"/>
    </LinearLayout>
</LinearLayout>
